[metadata]
name = bluarchive
version = attr: bluarchive.__version__
description = Download purchased content from Bluprint (formerly Craftsy)
long_description = file: README.md
long_description_content_type = text/markdown
author = Trevor Bergeron
author_email = bluarchive@sec.gd
url = https://github.com/half-duplex/bluarchive
license = CC BY-NC-SA 4.0
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Topic :: System :: Archiving :: Backup

[options]
python_requires = >=3.6, <4
packages = find:
install_requires =
    requests

[options.extras_require]
dev =
    black
    flake8
    flake8-coding
    flake8-import-order

[options.entry_points]
console_scripts =
    bluarchive = bluarchive.bluarchive:main

[flake8]
max-line-length = 99
import-order-style = google
exclude =
    venv/*
accept-encodings = utf-8
